# NBA_Underdog_Bettor

./: .env.example  .gitignore  CLAUDE.md  PRD.md  ROADMAP.md  main.py  pyproject.toml  run_daily.bat  run_scheduled.bat  test_v050.py
.claude/: settings.local.json
config/: settings.py
scripts/: fetch_results.py  report.py
src/: __init__.py
src/agents/: __init__.py  underdog_agent.py
src/api/: __init__.py  balldontlie.py  odds.py
src/bankroll/: __init__.py  manager.py
src/db/: __init__.py  database.py  models.py
src/memory/: __init__.py  history.py
src/models/: __init__.py  schemas.py
src/notifications/: __init__.py  discord.py  notifier.py  telegram.py
src/stats/: __init__.py  ratings.py  simulator.py
src/utils/: __init__.py  export.py  kelly.py  team_matcher.py
src/web/: __init__.py  app.py
src/web/templates/: analytics.html  base.html  dashboard.html  picks.html  results.html
